--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,12 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.0
-    hooks:
-      - id: pyupgrade
-        args: [--py38-plus]
+  # Disabled until typer supports '|' in type hints
+  # - repo: https://github.com/asottile/pyupgrade
+  #   rev: v3.3.1
+  #   hooks:
+  #     - id: pyupgrade
+  #       args: [--py38-plus]
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
@@ -23,9 +24,10 @@ repos:
     hooks:
       - id: reorder-python-imports
         exclude: ^(pre_commit/resources/|testing/resources/python3_hooks_repo/)
+
         args: [--py38-plus, --add-import, "from __future__ import annotations"]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.0.158"
+    rev: "v0.0.166"
     hooks:
       - id: ruff
   - repo: https://github.com/pre-commit/mirrors-mypy
