--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,5 @@
 name: build-docs
+
 on:
   push:
     branches:
@@ -8,13 +9,40 @@ on:
       - "docs/**"
       - "mkdocs.yml"
       # - "harbor_cli/**"
+
+concurrency:
+  group: docs-deploy
+
+env:
+  FORCE_COLOR: "1"
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: pip install mkdocs mkdocs-material mkdocstrings[python]
-      - run: mkdocs gh-deploy --force
+
+      - name: Ensure latest pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install ourself
+        run: |
+          pip install -e .
+
+      - name: Generate list of commands
+        run: python docs/scripts/validate_history.py
+
+      - name: Generate CLI help text for docs
+        run: hatch run docs:python docs/scripts/get_help_text.py
+
+      - name: Generate list of CLI commands for docs
+        run: hatch run docs:python docs/scripts/get_command_list_full.py
+
+      - name: Build documentation and publish
+        run: hatch run docs:mkdocs gh-deploy --force
