--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,4 +34,7 @@ repos:
     hooks:
       - id: mypy
         exclude: ^tests/
-        args: [--config-file, pyproject.toml]
+        args: [--config-file, pyproject.toml, --ignore-missing-imports]
+        # This is a bit of a hack, and might stop working in the future.
+        # We should probably just specify the dependencies we need (PyYAML)
+        additional_dependencies: [types-all]
