Uninstall Rich in docs workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,6 +33,11 @@ jobs:
         run: |
           pip install -e .
 
+      # We have to uninstall Rich until we can print the help text without
+      # terminal color codes (which Rich adds).
+      - name: Uninstall Rich
+        run: pip uninstall -y rich
+
       - name: Install hatch
         run: pip install hatch
 
