Add get_sample_config script

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,11 +36,14 @@ jobs:
       - name: Install hatch
         run: pip install hatch
 
-      - name: Generate CLI help text for docs
+      - name: Generate CLI help text
         run: hatch run docs:python docs/scripts/get_help_text.py
 
-      - name: Generate list of CLI commands for docs
+      - name: Generate list of CLI commands
         run: hatch run docs:python docs/scripts/get_command_list_full.py
+
+      - name: Generate sample config
+        run: hatch run docs:python docs/scripts/get_sample_config.py
 
       - name: Build documentation and publish
         run: hatch run docs:mkdocs gh-deploy --force
