--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,8 +50,8 @@ markdown_extensions:
 
 nav:
   - index.md
+  - configuration.md
   - "Usage":
-      - "usage/index.md"
-      - "usage/configuration.md"
-      - "usage/commands.md"
-      - "usage/terminology.md"
+      - usage/index.md
+      - usage/commands.md
+      - usage/terminology.md
