Use platformdirs instead of appdirs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
   "typer",
   "harborapi @ git+https://github.com/pederhan/harborapi",
   "pydantic",
-  "appdirs",
+  "platformdirs",
   "tomli",
   "tomli-w",
   "rich",
