--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,10 @@ name: test
 on:
   push:
     branches:
-      - workflow-testing
+      - workflow-test-fix
   pull_request:
     branches:
-      - workflow-testing
+      - workflow-test-fix
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
@@ -44,4 +44,4 @@ jobs:
         run: pip install hatch
 
       - name: Run tests
-        run: hatch run test -v
+        run: hatch run test:test -v
