Add main branch filter to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
   push:
     tags:
       - harbor-cli-v*
+    branches:
+      - main
 
 concurrency:
   group: build-harbor-cli-${{ github.head_ref }}
