--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,13 @@ pattern = "<!-- changelog follows -->\n\n(.*)"
 path = "harbor_cli/__about__.py"
 
 [tool.hatch.envs.default]
-dependencies = ["pytest", "pytest-cov", "mypy", "black"]
+dependencies = [
+  "pytest>=7.2.0",
+  "pytest-cov>=4.0.0",
+  "mypy>=0.991",
+  "black>=22.10.0",
+  "hypothesis>=6.62.1",
+]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args}"
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=harbor_cli --cov=tests {args}"
