--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,10 +28,14 @@ repos:
     rev: "v0.0.220"
     hooks:
       - id: ruff
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.991"
+  - repo: local
     hooks:
-      - id: mypy
+      - id: mypy-local
+        name: mypy
+        entry: mypy
+        language: python
+        types: [python]
+        files: '.*\.py[i]?'
         exclude: ^tests/
         args: [--config-file, pyproject.toml, --ignore-missing-imports]
         # This is a bit of a hack, and might stop working in the future.
