--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ dependencies = [
   "mkdocs-material",
   "mkdocstrings[python]",
   "mkdocs-macros-plugin",
+  "mkdocs-gen-files",
+  "mkdocs-literate-nav",
   "pyyaml",
 ]
 [tool.hatch.envs.docs.scripts]
