Run tests in default hatch environment

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,4 +46,4 @@ jobs:
         run: pip install hatch
 
       - name: Run tests
-        run: hatch run test:test -v
+        run: hatch run test -v
