--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Generate list of CLI commands
         run: hatch run docs:python docs/scripts/gen_command_list.py
 
+      - name: Generate list of global CLI options
+        run: hatch run docs:python docs/scripts/gen_cli_options.py
+
       - name: Build documentation and publish
         run: hatch run docs:mkdocs gh-deploy --force
