Build docs when any harbor_cli module file is updated

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,7 @@ on:
       - "mkdocs.yml"
       - ".github/workflows/docs.yml"
       - "pyproject.toml"
-      - "harbor_cli/commands/**"
+      - "harbor_cli/**"
 
 concurrency:
   group: docs-deploy
