--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "tomli>=2.0.1",
   "tomli-w>=1.0.0",
   "rich>=12.6.0",
+  "shellingham>=1.5.0",
   "loguru>=0.6.0",
   "click-repl>=0.2.0",
   "fuzzywuzzy>=0.18.0",
