--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dependencies = [
   "pytest>=7.2.0",
   "pytest-cov>=4.0.0",
   "pytest-mock>=3.10.0",
+  "pytest-timeout>=2.1.0",
   "mypy>=0.991",
   "black>=22.10.0",
   "hypothesis>=6.62.1",
