--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "typer>=0.7.0",
   "harborapi>=0.19.0",
   # "harborapi @ git+https://github.com/pederhan/harborapi.git@main",
+  "trogon>=0.2.1",
   "pydantic>=1.10.2, <2.0.0",   # not yet sure if we can use 2.0.0 out of the box
   "platformdirs>=2.5.4",
   "tomli>=2.0.1",
