--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,11 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "typer>=0.7.0",
+  "typer==0.9.0",
   "harborapi>=0.19.0",
   # "harborapi @ git+https://github.com/pederhan/harborapi.git@main",
   "pydantic>=1.10.2, <2.0.0",   # not yet sure if we can use 2.0.0 out of the box
+  "trogon>=0.3.0",
   "platformdirs>=2.5.4",
   "tomli>=2.0.1",
   "tomli-w>=1.0.0",
@@ -115,6 +116,7 @@ ignore = [
 ]
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["E402", "F401", "F403"]
+"harbor_cli/state.py" = ["E402"]
 
 [tool.mypy]
 python_version = "3.8"
