--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ dependencies = [
   "mypy>=0.991",
   "black>=22.10.0",
   "hypothesis>=6.62.1",
+  "ruff>=0.0.275",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args}"
@@ -110,13 +111,24 @@ exclude_lines = [
 ]
 
 [tool.ruff]
+select = [
+  "E", # pycodestyle
+  "F", # pyflakes
+]
 ignore = [
   "E501", # line too long (we let black handle this)
   "F541", # f-string is missing placeholders
 ]
+src = ["harbor_cli"]
+extend-exclude = ["tests"]
+
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["E402", "F401", "F403"]
 "harbor_cli/state.py" = ["E402"]
+"scripts/**" = ["D"]
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
 
 [tool.mypy]
 python_version = "3.8"
