--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "click-repl>=0.2.0",
   "fuzzywuzzy>=0.18.0",
   "python-Levenshtein>=0.20.9",
+  "keyring>=24.2.0",
 ]
 dynamic = ["version", "readme"]
 
