--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,12 @@ dependencies = [
   "tomli-w>=1.0.0",
   "rich>=12.6.0",
   "shellingham>=1.5.0",
-  "loguru>=0.6.0",
   "click-repl>=0.2.0",
   "fuzzywuzzy>=0.18.0",
   "python-Levenshtein>=0.20.9",
   "keyring>=24.2.0",
   "httpx[socks]",
+  "strenum>=0.4.15",
 ]
 dynamic = ["version", "readme"]
 
@@ -74,6 +74,7 @@ dependencies = [
   "black>=22.10.0",
   "hypothesis>=6.62.1",
   "ruff>=0.0.275",
+  "freezegun>=1.2.2",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args}"
