Add examples as images in README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ content-type = "text/markdown"
 
 [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
 path = "README.md"
+end-before = "\n<!-- Cut before here -->"
 
 [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
 path = "CHANGELOG.md"
