--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "shellingham>=1.5.0",
   "click-repl==0.2.0",
   "fuzzywuzzy>=0.18.0",
+  "python-Levenshtein>=0.20.9",
   "keyring>=24.2.0",
   "httpx[socks]",
   "strenum>=0.4.15",
