--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ classifiers = [
 ]
 dependencies = [
   "typer==0.9.0",
-  "harborapi>=0.22.0",
-  "pydantic>=1.10.2, <2.0.0",
+  "harborapi@git+https://github.com/pederhan/harborapi.git@pydantic-v2",
+  "pydantic>=2.4.0",
   "trogon>=0.5.0",
   "platformdirs>=2.5.4",
   "tomli>=2.0.1",
