Use consistent table column styling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,3 +145,4 @@ python_version = "3.8"
 ignore_missing_imports = true
 strict = false
 exclude = ["tests"]
+enable_incomplete_feature = ["Unpack"]
