--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 dependencies = [
   "typer==0.9.0",
-  "harborapi@git+https://github.com/pederhan/harborapi.git@pydantic-v2",
+  "harborapi>=0.23.0",
   "pydantic>=2.4.0",
   "trogon>=0.5.0",
   "platformdirs>=2.5.4",
