--- a/sample_config.toml
+++ b/sample_config.toml
@@ -56,6 +56,6 @@ ttl = 300
 enabled = true
 level = "WARNING"
 directory = "/Users/pederhan/Library/Logs/harbor-cli"
-filename = "harbor_cli-{time}.log"
-timeformat = "%Y-%m-%d"
+filename = "harbor-cli.log"
+datetime_format = "%Y-%m-%d"
 retention = 30
