--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ classifiers = [
 ]
 dependencies = [
   "typer==0.9.0",
-  "harborapi>=0.22.0",
-  "pydantic>=1.10.2, <2.0.0",
+  "harborapi>=0.23.0",
+  "pydantic>=2.4.0",
   "trogon>=0.5.0",
   "platformdirs>=2.5.4",
   "tomli>=2.0.1",
@@ -87,6 +87,9 @@ dependencies = [
 test = "pytest {args}"
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=harbor_cli --cov=tests {args}"
 no-cov = "cov --no-cov {args}"
+# Version bumping
+bump = "python scripts/bump_version.py {args}"
+bump-dry = "python scripts/bump_version.py --dry-run {args}"
 
 [tool.hatch.envs.docs]
 dependencies = [
@@ -145,3 +148,4 @@ python_version = "3.8"
 ignore_missing_imports = true
 strict = false
 exclude = ["tests"]
+enable_incomplete_feature = ["Unpack"]
