--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,13 +27,7 @@ repos:
         args: [--fix]
       # Run the formatter.
       - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.10.1"
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.368
     hooks:
-      - id: mypy
-        additional_dependencies: [types-all, rich]
-        language: python
-        types: [python]
-        files: '.*\.py[i]?'
-        exclude: ^tests/
-        args: [--config-file, pyproject.toml, --ignore-missing-imports]
+    - id: pyright
