--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,25 +124,6 @@ exclude_lines = [
   "pass",
 ]
 
-[tool.ruff]
-select = [
-  "E", # pycodestyle
-  "F", # pyflakes
-]
-ignore = [
-  "E501", # line too long (we let ruff formatter handle this)
-  "F541", # f-string is missing placeholders
-]
-src = ["harbor_cli"]
-extend-exclude = ["tests", "harbor_cli/__init__.py"]
-
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["E402", "F401", "F403"]
-"harbor_cli/state.py" = ["E402"]
-"scripts/**" = ["D"]
-
-[tool.ruff.pydocstyle]
-convention = "numpy"
 
 [tool.mypy]
 python_version = "3.8"
@@ -158,3 +139,34 @@ venvPath = "."
 venv = ".venv"
 ignore = ["tests", "scripts", "docs/scripts"]
 typeCheckingMode = "strict"
+
+[tool.ruff]
+src = ["harbor_cli"]
+extend-exclude = ["tests", "harbor_cli/__init__.py"]
+
+[tool.ruff.lint]
+extend-select = ["I"]
+select = [
+  "E", # pycodestyle
+  "F", # pyflakes
+]
+ignore = [
+  "E501", # line too long (we let ruff formatter handle this)
+  "F541", # f-string is missing placeholders
+]
+
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402", "F401", "F403"]
+"harbor_cli/state.py" = ["E402"]
+"scripts/**" = ["D"]
+
+
+[tool.ruff.lint.isort]
+# Force one line per import to simplify diffing and merging
+force-single-line = true
+# Add annotations import to every file
+required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
