--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
           path: dist
 
       - name: Push build artifacts to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.2
+        uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
-          skip_existing: true
+          skip-existing: true
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN_HARBOR_CLI }}
